--- a/app/views/coleta/mensalvisualizar.html.erb
+++ b/app/views/coleta/mensalvisualizar.html.erb
@@ -1,49 +1,2 @@
 
-
-
-    <%= form_for @coleta, url: coleta_mensalcidadesuf_path do |f| %>
-         <%= f.hidden_field :id, :value => @coleta.id %>
-
-          <div class="box-title"><%= @coleta.tipoColeta %></div>
-             <div class="box-description">Coleta de dados de acessos:
-               
-             <div class="row mb-3">
-               <div class="col-md-6">
-                    <p><%= f.label :uf, "Selecione o Estado" %></p>
-                    <% listaSelectUf = [] %>
-                    <% listaSelectMunicipio = [] %>
-                    <% for uf in @ufs %>
-                         <% listaSelectUf << [uf.sigla + " - " + uf.nome, uf.sigla ] %>
-                    <% end %>
-                    <% for municipio in @municipios %>
-                         <% listaSelectMunicipio << [municipio.nome, municipio.id ] %>
-                    <% end %>
-    
-    
-                    <p><%= f.select :uf, options_for_select(listaSelectUf) {}, class:'form-select' %></p>
-               </div>
-               <div class="col-md-6">
-                     <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
-                     <p><%= f.select :cidade, options_for_select(listaSelectMunicipio) {}, class:'form-select' %></p>
-               </div>
-             </div>
-
-             <div class="row mb-3">
-               <div class="col-md-6">
-                  <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE" %></p>
-               </div>
-             </div>
-  
-             <%= f.submit "Adicionar", class:" btn btn-primary" %>
-
-           </div>
-         </div>
-
-     <% end %>
-
-<p>UFs:</p><p>
-<% for uf in @ufs %>
-     <%= uf.id %> - <%= uf.sigla %> - <%= uf.nome %> <br />
-<% end %>
-</p>
+<h1>DESENVOLVER A VISUALIZAÇÃO DE UMA COLEGA JÁ REALIZADA<h1>
