--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -29,7 +29,7 @@
              <div class="row mb-3">
                <div class="col-md-6">
                   <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE" %></p>
+                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE", disabled: true %></p>
                </div>
              </div>
   
