--- a/app/views/coleta/_coleta_mensal_scm.html.erb
+++ b/app/views/coleta/_coleta_mensal_scm.html.erb
@@ -61,7 +61,7 @@
                        </div>
                        <div class="col-md-6">
                           <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                          <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE" %></p>
+                          <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE", disabled: true %></p>
                        </div>
                      </div>
           
