--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -1,6 +1,7 @@
 
     <%= form_for @coleta, url: coleta_mensalinformar_path do |f| %>
          <%= f.hidden_field :id, :value => @coleta.id %>
+         <%= f.hidden_field :uf, :value => @coleta.uf %>
 
           <div class="box-title"><%= @coleta.tipoColeta %></div>
              <div class="box-description">Coleta de dados de acessos:
