--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -1,5 +1,5 @@
 
-    <%= form_for @coleta, url: coleta_mensalinformar_path do |f| %>
+    <%= form_for @coleta, url: coleta_mensalinformar_path, :html => {:id => "formColeta"} do |f| %>
          <%= f.hidden_field :id, :value => @coleta.id %>
          <%= f.hidden_field :uf, :value => @coleta.uf %>
 
@@ -21,18 +21,22 @@
                </div>
              </div>
 
-             <div class="row mb-3">
-               <div class="col-md-6">
-                  <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE", disabled: true %></p>
-               </div>
-             </div>
-  
-             <%= f.submit "Adicionar", class:" btn btn-primary" %>
-
            </div>
          </div>
 
      <% end %>
 
-  
+    
+
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', () => {
+      const selectElement = document.getElementById('selectUf');
+
+      if (selectElement) {
+        selectElement.addEventListener('change', (event) => {
+          const form = document.getElementById('formColeta');
+          form.submit();
+        });
+      }
+    });
+  </script>                
