--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -11,6 +11,9 @@
                     <p><%= f.label :uf, "UF selecionada" %></p>
                     <p><%= f.text_field :uf, class: "form-control", id: "uf", disabled: true %></p>
                </div>
+             </div>
+
+             <div class="row mb-3">
                <div class="col-md-6">
                     <% listaSelectMunicipio = [] %>
                     <% for municipio in @municipios %>
@@ -21,7 +24,14 @@
                </div>
              </div>
 
-           </div>
+             <div class="row mb-3">
+               <div class="col-md-6">
+                  <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
+                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE", disabled: true %></p>
+               </div>
+             </div>
+
+            </div>
          </div>
 
      <% end %>
