--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -25,14 +25,14 @@
              <div class="row mb-3">
                <div class="col-md-6">
                      <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
-                      <p><%= f.text_field :cidade, class: "form-control", id: "cidade", disabled: true %></p>
+                      <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
                </div>
              </div>
 
              <div class="row mb-3">
                <div class="col-md-6">
                   <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
-                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", disabled: true %></p>
+                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
                </div>
              </div>
   
