--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -16,6 +16,7 @@
              <div class="row mb-3">
                <div class="col-md-6">
                     <% listaSelectMunicipio = [] %>
+                    <% listaSelectMunicipio << ["Selecione", "" ] %>
                     <% for municipio in @municipios %>
                          <% listaSelectMunicipio << [municipio.nome, municipio.nome ] %>
                     <% end %>
