--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">col-sm-4</div>    
+    <div class="col-sm-4"><h5><strong>Dados da Empresa</strong></h5></div>    
     <div class="col-sm-8">
 
       <h2><strong><%= @organizacao.nome %></strong></h2><br/>
