--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -186,33 +186,11 @@
                     <% if coleta.dataRealizacao.nil? %>
                             <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
                     <% else %>
-                        <% if coleta.dataInformacaoEnvio.nil? %>
-                                <% if coleta.tituloColeta == 'Coleta Mensal' %>
-                                  <td> <a href="/coleta/mensalvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
-                                  <br /><a href="/coleta/mensalgerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
-                                  <br /><a href="/coleta/mensalinformarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
-                                <% end %>
-                                <% if coleta.tituloColeta == 'Coleta Semestral' %>
-                                  <td> <a href="/coleta/semestralvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
-                                  <br /><a href="/coleta/semestralgerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
-                                  <br /><a href="/coleta/semestralinformarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
-                                <% end %>
-                                <% if coleta.tituloColeta == 'Coleta Anual' %>
-                                  <td> <a href="/coleta/anualvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
-                                  <br /><a href="/coleta/anualgerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
-                                  <br /><a href="/coleta/anualinformarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
-                                <% end %>
-                        <% else %>
-                                <% if coleta.tituloColeta == 'Coleta Mensal' %>
-                                  <td> <a href="/coleta/mensalvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> </td>
-                                <% end %>
-                                <% if coleta.tituloColeta == 'Coleta Semestral' %>
-                                  <td> <a href="/coleta/semestralvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a>  </td>
-                                <% end %>
-                                <% if coleta.tituloColeta == 'Coleta Anual' %>
-                                  <td> <a href="/coleta/anualvisualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a>  </td>
-                                <% end %>
-                        <% end %>
+                            <td> <a href="/coleta/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
+                            <% if coleta.dataInformacaoEnvio.nil? %>
+                                      <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
+                                      <br /><a href="/coleta/informarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
+                            <% end %>
                     <% end %>
 
                 </tr>
