--- a/app/views/coleta/_coleta_semestral_seac.html.erb
+++ b/app/views/coleta/_coleta_semestral_seac.html.erb
@@ -30,7 +30,7 @@
                      <div class="row mb-3">
                        <div class="col-md-6">
                           <p><%= f.label :dadoInformado, "Dado Informado", class: "form-label" %></p>
-                          <p><%= f.select :dadoInformado, options_for_select([['receita', 'Receita_Operacional_Líquida_ROL'], ['capital', 'Capital_Expenditure_CAPEX'], ['trafego', 'Tráfego_Dados_Total_MB, Tráfego_Voz_Minutos']])</p>
+                          <p><%= f.select :dadoInformado, options_for_select([['receita', 'Receita_Operacional_Líquida_ROL'], ['capital', 'Capital_Expenditure_CAPEX'], ['trafego', 'Tráfego_Dados_Total_MB, Tráfego_Voz_Minutos']]) %></p>
                         </div>
 
                          <div class="col-md-6">
