--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -3,7 +3,7 @@
 <% else %>
 
 <div class="container">
-    <h2><b>Início</b></h2>
+    <h2><%= @organizacao.nome %></h2>
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
