--- a/app/views/coleta/mensalcriar.html.erb
+++ b/app/views/coleta/mensalcriar.html.erb
@@ -9,7 +9,7 @@
               <%= f.hidden_field :tipoColeta, :value => "SCM" %>
                     <div class="box-title">SCM</div>
                     <div class="box-description">Coleta de dados de acessos:
-                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] class: "selecao"%></p>
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
               <% end %>
@@ -25,7 +25,7 @@
               <%= f.hidden_field :tipoColeta, :value => "TVpA" %>
                     <div class="box-title">TVpA</div>
                     <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais
-                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] class: "selecao"%></p>
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
               <% end %>
@@ -41,7 +41,7 @@
               <%= f.hidden_field :tipoColeta, :value => "STFC" %>
                     <div class="box-title">STFC</div>
                     <div class="box-description">Coleta de dados de Infraestrutura de Transporte
-                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] class: "selecao" %></p>
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
               <% end %>
