--- a/app/views/coleta/_coleta_semestral_smp.html.erb
+++ b/app/views/coleta/_coleta_semestral_smp.html.erb
@@ -19,7 +19,7 @@
                       <div class="row mb-3">
                         <div class="col-md-6">
                           <p><%= f.label :trimestre, "Trimestre", class: "form-label" %></p>
-                          <p><%= f.select :trimestre, options_for_select([['TR', 1], ['TR', 2], ['TR', 3], ['TR', 4]]) %></p>
+                          <p><%= f.select :trimestre, options_for_select([['TR1', 1], ['TR2', 2], ['TR3', 3], ['TR4', 4]]) %></p>
                         </div>
                         <div class="col-md-6">
                           <p><%= f.label :uf, "Selecione o Estado" %></p>
