--- a/app/views/coleta/_coleta_semestral_scm.html.erb
+++ b/app/views/coleta/_coleta_semestral_scm.html.erb
@@ -7,11 +7,11 @@
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
-                              <p><%= f.label :cnpj, "Cidade", class: "form-label" %></p>
+                              <p><%= f.label :cnpj, "CNPJ", class: "form-label" %></p>
                                <p><%= f.text_field :cidade, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
                          </div>
                          <div class="col-md-6">
-                               <p><%= f.label :ano, "Cidade", class: "form-label" %></p>
+                               <p><%= f.label :ano, "Ano", class: "form-label" %></p>
                                <p><%= f.text_field :ano, class: "form-control", id: "ano", placeholder: "Digite o ano" %></p>
                          </div>
                        </div>
