--- a/app/views/coleta/_coleta_semestral_scm.html.erb
+++ b/app/views/coleta/_coleta_semestral_scm.html.erb
@@ -18,7 +18,7 @@
 
                       <div class="row mb-3">
                         <div class="col-md-6">
-                          <p><%= f.label :trimestre, "Tipo de Cliente", class: "form-label" %></p>
+                          <p><%= f.label :trimestre, "Trimestre", class: "form-label" %></p>
                           <p><%= f.select :trimestre, options_for_select([['TR1', 1], ['TR2', 2], ['TR3', 3], ['TR4', 4]]) %></p>
                         </div>
                         <div class="col-md-6">
