--- a/app/views/coleta/_coleta_semestral_smp.html.erb
+++ b/app/views/coleta/_coleta_semestral_smp.html.erb
@@ -22,7 +22,7 @@
                           <p><%= f.select :trimestre, options_for_select([['TR1', 1], ['TR2', 2], ['TR3', 3], ['TR4', 4]]) %></p>
                         </div>
                         <div class="col-md-6">
-                          <p><%= f.label :uf, "Selecione o Estado" %></p>
+                          <p><%= f.label :uf, "Selecione a UF" %></p>
                               <p><%= f.select :uf, options_for_select([['AC', 'AC'], ['AL', 'AL'], ['AP', 'AP'], ['AM', 'AM'], ['BA', 'BA'], ['CE', 'CE'], ['DF', 'DF'], ['ES', 'ES'], ['GO', 'GO'], ['MA', 'MA'], ['MT', 'MT'],['MS', 'MS'], ['MG', 'MG'], ['PA', 'PA'], ['PB', 'PB'], ['PR', 'PR'], ['PE', 'PE'], ['PI', 'PI'], ['RJ', 'RJ'], ['RN', 'RN'], ['RS', 'RS'], ['RO', 'RO'], ['RR', 'RR'], ['SC', 'SC'], ['SP', 'SP'], ['SE', 'SE'], ['TO', 'TO']]) {}, class:'form-select' %></p>
                         </div>
                       </div>
