--- a/app/views/coleta/_coleta_semestral_seac.html.erb
+++ b/app/views/coleta/_coleta_semestral_seac.html.erb
@@ -7,11 +7,11 @@
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
-                              <p><%= f.label :cnpj, "Cnpj", class: "form-label" %></p>
-                               <p><%= f.text_field :cnpj, class: "form-control", id: "cnpj", placeholder: "Digite o CNPJ da Prestadora" %></p>
+                          O CNPJ FOI RETIRADO - VOLTAR O COMMIT
                          </div>
                          <div class="col-md-6">
-                          O CNPJ FOI RETIRADO - VOLTAR O COMMIT
+                               <p><%= f.label :ano, "Ano", class: "form-label" %></p>
+                               <p><%= f.text_field :ano, class: "form-control", id: "ano", placeholder: "Digite o ano" %></p>
                          </div>
                        </div>
 
