--- a/app/views/coleta/_coleta_semestral_scm.html.erb
+++ b/app/views/coleta/_coleta_semestral_scm.html.erb
@@ -12,7 +12,7 @@
                          </div>
                          <div class="col-md-6">
                                <p><%= f.label :anoInformado, "Ano", class: "form-label" %></p>
-                               <p><%= f.text_field :anoInformado, class: "form-control", id: "ano", placeholder: "Digite o ano" %></p>
+                               <p><%= f.text_field :anoInformado, class: "form-control", id: "anoInformado", placeholder: "Digite o ano" %></p>
                          </div>
                        </div>
 
