--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -107,8 +107,7 @@
                     <% if coleta.dataRealizacao.nil? %>
                             <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
                     <% else %>
-                            <td> <a href="/coleta/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
-                            <% if coleta.dataInformacaoEnvio.nil? %>
+                            <td><% if coleta.dataInformacaoEnvio.nil? %>
                                       <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
                                       <br /><a href="/coleta/informarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
                             <% end %>
