--- a/app/views/coleta/anualcriar.html.erb
+++ b/app/views/coleta/anualcriar.html.erb
@@ -1,4 +1,51 @@
- <div class="container">
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Box 1</h5>
+          <p class="card-text">Conteúdo do Box 1.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Box 2</h5>
+          <p class="card-text">Conteúdo do Box 2.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Box 3</h5>
+          <p class="card-text">Conteúdo do Box 3.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Box 4</h5>
+          <p class="card-text">Conteúdo do Box 4.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<div class="container">
     
         <div class="row justify-content-center">
 
